[gd_scene load_steps=30 format=3 uid="uid://dsg6g6n7odkku"]

[ext_resource type="Script" uid="uid://cqfxapxf1oga7" path="res://baselevel.gd" id="1_0gb7o"]
[ext_resource type="PackedScene" uid="uid://d1jgdbq8ej5d1" path="res://RayPickerCamera/ray_picker_camera.tscn" id="1_4fr0t"]
[ext_resource type="MeshLibrary" uid="uid://rqrf7vkd782s" path="res://MeshLibraries/SpaceLibrary.tres" id="1_svbj1"]
[ext_resource type="PackedScene" uid="uid://biq68l1tkse7h" path="res://pause_menu.tscn" id="2_jx03x"]
[ext_resource type="PackedScene" uid="uid://n8ct3xk5c4vc" path="res://Enemy/enemy.tscn" id="2_lhh3q"]
[ext_resource type="Script" uid="uid://bqm3tmthk66x7" path="res://EnemyPath.gd" id="3_ckvxq"]
[ext_resource type="PackedScene" uid="uid://ba5162yegmh4r" path="res://base/base.tscn" id="3_ln1i7"]
[ext_resource type="Material" uid="uid://b3080baa7rcmb" path="res://ghost_can_build.tres" id="4_mxdo1"]
[ext_resource type="Material" uid="uid://cav1gmv57yyab" path="res://ghost_cannot_build.tres" id="5_5bd5a"]
[ext_resource type="Script" uid="uid://dke8q0yo2wbbr" path="res://TurretManager.gd" id="5_15vcq"]
[ext_resource type="PackedScene" uid="uid://ci0tkpy016cyt" path="res://turret/turret.tscn" id="6_dkexh"]
[ext_resource type="PackedScene" uid="uid://bbbvx7lmq1rn0" path="res://turret_quick.tscn" id="8_nuyta"]
[ext_resource type="FontFile" uid="uid://dutp781p7514m" path="res://Assets/Asap/static/Asap-BoldItalic.ttf" id="8_qvjmv"]
[ext_resource type="Script" uid="uid://050usdj1y2ok" path="res://Bank.gd" id="8_rtyvm"]
[ext_resource type="PackedScene" uid="uid://cfckcbxwo3ma0" path="res://DifficultyManager/difficulty_manager.tscn" id="9_fmh2w"]
[ext_resource type="PackedScene" uid="uid://dajjkhsantum" path="res://DifficultyManager/UserInterface/victory_layer.tscn" id="10_cnq5y"]
[ext_resource type="PackedScene" uid="uid://crpw67q5yagc1" path="res://DifficultyManager/UserInterface/defeat_layer.tscn" id="12_uijrt"]
[ext_resource type="PackedScene" uid="uid://djwfvcb6uw1ol" path="res://DifficultyManager/UserInterface/game_layer.tscn" id="14_6hptv"]
[ext_resource type="Script" uid="uid://d0flo4xr2ojg2" path="res://GameSettings.gd" id="17_lnkyr"]
[ext_resource type="PackedScene" uid="uid://tgjo3egxar5h" path="res://tutorial_layer.tscn" id="18_u3sip"]
[ext_resource type="PackedScene" uid="uid://c0yvy5xbj3unx" path="res://main_menu.tscn" id="20_xr7dw"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_3corq"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_7fkk7"]
sky_material = SubResource("ProceduralSkyMaterial_3corq")

[sub_resource type="Environment" id="Environment_3mgsu"]
background_mode = 2
sky = SubResource("Sky_7fkk7")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8y3r6"]
albedo_color = Color(0.560784, 0.6, 0.301961, 1)

[sub_resource type="Curve3D" id="Curve3D_1th5r"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -22, 0, 6, -1, 0, 1, 1, 0, -1, 14, 0, 6, 1, 0, 1, -1, 0, -1, 14, 0, -2, 1, 0, 2, -1, 0, -2, -10, 0, -2, 0, 0, 0, 0, 0, 0, -10, 0, -7),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0)
}
point_count = 5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_yd2x5"]
albedo_color = Color(0.235294, 0.235294, 0.235294, 1)

[sub_resource type="Theme" id="Theme_ake75"]
default_font = ExtResource("8_qvjmv")

[sub_resource type="LabelSettings" id="LabelSettings_gghht"]
font_size = 64
font_color = Color(0.984314, 0.772549, 0.352941, 1)
outline_size = 16
outline_color = Color(0, 0, 0, 1)

[node name="BaseLevel" type="Node3D"]
script = ExtResource("1_0gb7o")
pause_menu_scene = ExtResource("2_jx03x")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_3mgsu")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="Floor" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
size = Vector3(100, 2, 100)
material = SubResource("StandardMaterial3D_8y3r6")

[node name="RayPickerCamera" parent="." node_paths=PackedStringArray("gridmap", "turret_manager") instance=ExtResource("1_4fr0t")]
process_mode = 3
gridmap = NodePath("../GridMap")
turret_manager = NodePath("../TurretManager")
turret_scene = ExtResource("6_dkexh")
turret_quick_scene = ExtResource("8_nuyta")
ghost_material_can_build = ExtResource("4_mxdo1")
ghost_material_cannot_build = ExtResource("5_5bd5a")

[node name="GridMap" type="GridMap" parent="."]
mesh_library = ExtResource("1_svbj1")
cell_size = Vector3(4, 4, 4)
cell_center_y = false
data = {
"cells": PackedInt32Array(65535, 65534, 0, 65535, 2, 3, 65531, 65535, 1048578, 4, 65535, 0, 65531, 65534, 1048578, 65531, 0, 1048578, 65531, 2, 655362, 65532, 65534, 1048578, 65532, 2, 0, 65533, 2, 0, 65534, 65534, 0, 65534, 2, 0, 0, 65534, 3, 0, 2, 0, 1, 65534, 0, 1, 2, 0, 2, 65534, 0, 2, 2, 1441794, 3, 65534, 1048578, 3, 2, 0, 4, 65534, 1048577, 4, 0, 0, 4, 1, 1441795, 4, 2, 1048577, 65532, 0, 0, 65533, 0, 3, 65534, 0, 0, 0, 0, 0, 1, 0, 0, 2, 0, 1048579, 65532, 65535, 0, 65535, 65535, 1, 1, 65535, 1, 65535, 0, 655362, 65528, 65530, 1048578, 65528, 65531, 1048578, 65528, 65532, 1048578, 65528, 65533, 1048578, 65528, 65534, 1048578, 65528, 65535, 1048578, 65528, 0, 1048578, 65529, 65530, 1048578, 65529, 65531, 1048578, 65529, 65532, 1048578, 65529, 65533, 1048578, 65529, 65534, 1048578, 65529, 65535, 1048578, 65529, 0, 1048578, 65530, 65530, 1048578, 65530, 65531, 1048578, 65530, 65532, 1048578, 65530, 65533, 1048578, 65530, 65534, 1048578, 65530, 65535, 1048578, 65530, 0, 1048578, 65531, 65530, 1048578, 65531, 65531, 1048578, 65531, 65532, 1048578, 65531, 65533, 1048578, 65532, 65530, 1048578, 65532, 65531, 1048578, 65532, 65532, 1048578, 65532, 65533, 1048578, 65533, 65530, 1048578, 65533, 65531, 1048578, 65533, 65532, 1048578, 65533, 65533, 1048578, 65534, 65530, 1048578, 65534, 65531, 1048578, 65534, 65532, 1048578, 65534, 65533, 1048578, 65535, 65530, 1048578, 65535, 65531, 1048578, 65535, 65532, 1048578, 65535, 65533, 1048578, 0, 65530, 1048578, 0, 65531, 1048578, 0, 65532, 1048578, 0, 65533, 1048578, 1, 65530, 1048578, 1, 65531, 1048578, 1, 65532, 1048578, 1, 65533, 1048578, 2, 65530, 1048578, 2, 65531, 1048578, 2, 65532, 1048578, 2, 65533, 1048578, 3, 65530, 1048578, 3, 65531, 1048578, 3, 65532, 1048578, 3, 65533, 1048578, 4, 65530, 1048578, 4, 65531, 1048578, 4, 65532, 1048578, 4, 65533, 1048578, 5, 65530, 1048578, 5, 65531, 1048578, 5, 65532, 1048578, 5, 65533, 1048578, 5, 65534, 1048578, 5, 65535, 1048578, 5, 0, 1048578, 6, 65530, 1048578, 6, 65531, 1048578, 6, 65532, 1048578, 6, 65533, 1048578, 6, 65534, 1048578, 6, 65535, 1048578, 6, 0, 1048578, 7, 65530, 1048578, 7, 65531, 1048578, 7, 65532, 1048578, 7, 65533, 1048578, 7, 65534, 1048578, 7, 65535, 1048578, 7, 0, 1048578, 8, 2, 1048577)
}

[node name="EnemyPath" type="Path3D" parent="." node_paths=PackedStringArray("difficulty_manager", "victory_layer", "tutorial_layer")]
curve = SubResource("Curve3D_1th5r")
script = ExtResource("3_ckvxq")
enemy_scene = ExtResource("2_lhh3q")
difficulty_manager = NodePath("../DifficultyManager")
victory_layer = NodePath("../VictoryLayer")
tutorial_layer = NodePath("../TutorialLayer")

[node name="Road" type="CSGPolygon3D" parent="EnemyPath"]
polygon = PackedVector2Array(-1, 0, -1, 0.1, 1, 0.1, 1, 0)
mode = 2
path_node = NodePath("..")
path_interval_type = 0
path_interval = 0.5
path_simplify_angle = 0.0
path_rotation = 2
path_rotation_accurate = false
path_local = true
path_continuous_u = true
path_u_distance = 1.0
path_joined = false
material = SubResource("StandardMaterial3D_yd2x5")

[node name="LeftEdge" type="CSGPolygon3D" parent="EnemyPath"]
polygon = PackedVector2Array(-1.1, 0, -1.1, 0.15, -0.9, 0.15, -0.9, 0)
mode = 2
path_node = NodePath("..")
path_interval_type = 0
path_interval = 0.5
path_simplify_angle = 0.0
path_rotation = 2
path_rotation_accurate = false
path_local = true
path_continuous_u = true
path_u_distance = 1.0
path_joined = false

[node name="RightEdge" type="CSGPolygon3D" parent="EnemyPath"]
polygon = PackedVector2Array(0.9, 0, 0.9, 0.15, 1.1, 0.15, 1.1, 0)
mode = 2
path_node = NodePath("..")
path_interval_type = 0
path_interval = 0.5
path_simplify_angle = 0.0
path_rotation = 2
path_rotation_accurate = false
path_local = true
path_continuous_u = true
path_u_distance = 1.0
path_joined = false

[node name="Timer" type="Timer" parent="EnemyPath"]
wait_time = 2.0
autostart = true

[node name="Base" parent="." node_paths=PackedStringArray("defeat_layer") instance=ExtResource("3_ln1i7")]
defeat_layer = NodePath("../DefeatLayer")

[node name="TurretManager" type="Node3D" parent="." node_paths=PackedStringArray("enemy_path")]
script = ExtResource("5_15vcq")
turret = ExtResource("6_dkexh")
turret_quick = ExtResource("8_nuyta")
enemy_path = NodePath("../EnemyPath")

[node name="Bank" type="MarginContainer" parent="." groups=["bank"]]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = SubResource("Theme_ake75")
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16
script = ExtResource("8_rtyvm")

[node name="Label" type="Label" parent="Bank"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
text = "Gold: "
label_settings = SubResource("LabelSettings_gghht")

[node name="DifficultyManager" parent="." instance=ExtResource("9_fmh2w")]
game_length = 180.0

[node name="VictoryLayer" parent="." instance=ExtResource("10_cnq5y")]
visible = false

[node name="DefeatLayer" parent="." instance=ExtResource("12_uijrt")]

[node name="GameLayer" parent="." node_paths=PackedStringArray("turret_button", "quickfire_turret_button") instance=ExtResource("14_6hptv")]
process_mode = 3
turret_button = NodePath("MarginContainer/PanelContainer/HBoxContainer/Turret")
quickfire_turret_button = NodePath("MarginContainer/PanelContainer/HBoxContainer/Quickfire Turret")

[node name="GameSettings" type="Node" parent="."]
script = ExtResource("17_lnkyr")

[node name="TutorialLayer" parent="." node_paths=PackedStringArray("ray_picker_camera", "build_turret_button", "quick_turret_button") instance=ExtResource("18_u3sip")]
ray_picker_camera = NodePath("../RayPickerCamera")
build_turret_button = NodePath("../GameLayer/MarginContainer/PanelContainer/HBoxContainer/Turret")
quick_turret_button = NodePath("../GameLayer/MarginContainer/PanelContainer/HBoxContainer/Quickfire Turret")

[node name="MainMenu" parent="." node_paths=PackedStringArray("turret_button", "quick_turret_button") instance=ExtResource("20_xr7dw")]
turret_button = NodePath("../GameLayer/MarginContainer/PanelContainer/HBoxContainer/Turret")
quick_turret_button = NodePath("../GameLayer/MarginContainer/PanelContainer/HBoxContainer/Quickfire Turret")

[connection signal="timeout" from="EnemyPath/Timer" to="EnemyPath" method="spawn_enemy"]
[connection signal="stop_spawning_enemies" from="DifficultyManager" to="EnemyPath" method="_on_difficulty_manager_stop_spawning_enemies"]
[connection signal="mouse_entered" from="GameLayer/MarginContainer/PanelContainer/HBoxContainer/Turret" to="GameLayer" method="_on_turret_mouse_entered"]
[connection signal="mouse_exited" from="GameLayer/MarginContainer/PanelContainer/HBoxContainer/Turret" to="GameLayer" method="_on_mouse_exited"]
[connection signal="pressed" from="GameLayer/MarginContainer/PanelContainer/HBoxContainer/Turret" to="RayPickerCamera" method="_on_build_turret_pressed"]
[connection signal="mouse_entered" from="GameLayer/MarginContainer/PanelContainer/HBoxContainer/Quickfire Turret" to="GameLayer" method="_on_quickfire_turret_mouse_entered"]
[connection signal="mouse_exited" from="GameLayer/MarginContainer/PanelContainer/HBoxContainer/Quickfire Turret" to="GameLayer" method="_on_mouse_exited"]
[connection signal="pressed" from="GameLayer/MarginContainer/PanelContainer/HBoxContainer/Quickfire Turret" to="RayPickerCamera" method="_on_build_turret_quick_pressed"]

[editable path="GameLayer"]
